2005-08-29  Romain Francoise  <romain@orebokech.com>

	* gnus-fun.el (gnus-convert-image-to-face-command): Fix typo in
	docstring.
	(gnus-face-from-file): Likewise.

2005-08-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-mime-save-part-and-strip): Don't prompt.
	(gnus-mime-delete-part): Don't prompt if `gnus-expert-user' is
	non-nil.
	(gnus-auto-select-part): New variable.
	(gnus-article-jump-to-part): New function.
	(gnus-article-edit-part, gnus-mime-save-part-and-strip)
	(gnus-mime-delete-part): Allow selecting specified part after
	deleting or stripping parts.
	(gnus-article-jump-to-part): Don't use `read-number'.  Use last
	part if argument is bogus.

2005-08-22  Karl Chen  <quarl@cs.berkeley.edu>  (tiny change)

	* gnus-art.el (gnus-treatment-function-alist): Move date-lapsed to
	the end of the date treatments.

2005-08-15  Simon Josefsson  <jas@extundo.com>

	* pgg.el (url-insert-file-contents): Don't autoload it, Emacs has
	it in url-handlers.el and XEmacs in url.el.  Reported by Luca
	Capello and Romain Francoise.
	(pgg-fetch-key-function): Removed, not used?
	(pgg-insert-url-with-w3): Require url, to get
	url-insert-file-contents regardless of where it is defined.

2005-08-13  Romain Francoise  <romain@orebokech.com>

	* message.el (message-cite-original-1): New function.
	(message-cite-original): Use it.
	(message-cite-original-without-signature): Ditto.

2005-08-08  Romain Francoise  <romain@orebokech.com>

	* message.el (message-yank-empty-prefix): New variable.
	(message-indent-citation): Use it.
	(message-cite-original-without-signature): Respect X-No-Archive.

2005-08-08  Simon Josefsson  <jas@extundo.com>

	* pgg.el: Autoload url-insert-file-contents instead of loading
	w3/url.
	(pgg-insert-url-with-w3): Don't load url here.

2005-08-07  Jesper Harder  <harder@phys.au.dk>

	* message.el (message-kill-to-signature): Don't insert newline at
	bol.
	(message-newline-and-reformat): Bind fill-paragraph-function to nil.
